# Const-Time-Meta-Programming

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.lt  config.status  configure  configure.ac  libtool
.libs/: libCTTimer.so.0  libCTTimer.so.0.0.0
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
main/: .ctt_main.cpp.swp  CTTimer  ctt_main.cpp  ctt_main.hpp
main/.deps/: main_CTTimer-ctt_main.Po  main_CTTimer-ctt_main.Tpo
main/.libs/: CTTimer  lt-CTTimer
src/: .ctt_library.hpp.swp  ctt_library.cpp  ctt_library.hpp  ctt_timer.cpp  ctt_timer.hpp  ctt_utility.cpp  ctt_utility.hpp  utility.cpp  utility.hpp
src/.deps/: libCTTimer_la-ctt_timer.Plo  libCTTimer_la-ctt_utility.Plo
